--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -22,8 +22,8 @@
   width: 100%;
   height: 100%;
   background-color: black; /* Solid black background */
-  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="180" height="180" viewBox="0 0 180 180"><defs><pattern id="grid" width="60" height="60" patternUnits="userSpaceOnUse"><path d="M 60 0 L 0 0 0 60" fill="none" stroke="%23004d4d" stroke-width="3"/></pattern></defs><rect width="100%" height="100%" fill="url(%23grid)"/></svg>');
-  opacity: 0.8; /* Adjust visibility */
+  background-image: url('./hero.svg'); /* Using the imported SVG file */
+  opacity: 1; /* Adjust visibility */
   z-index: -1;
 }
 
